k8s-setup/Monitoring/monitor-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: prometheus-ingress
  namespace: default 
  annotations: 
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec: 
  ingressClassName: "nginx"
  tls: 
    - hosts: 
      - prometheus.sethnexusonline.online
      - grafana.sethnexusonline.online
      secretName: kube-stack-new-tls
  rules: 
    - host: prometheus.sethnexusonline.online
      http:
        paths: 
          - pathType: Prefix 
            path: "/"
            backend: 
              service: 
                name: monitor-stack-release-kube-prometheus
                port: 
                  number: 9090
    - host: grafana.sethnexusonline.online
      http:
        paths: 
          - pathType: Prefix 
            path: "/"
            backend: 
              service: 
                name: monitor-stack-release-grafana 
                port: 
                  number: 80
